# vaulttranslate-ct2

./: AGENTS.md  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
.codex/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_task.md  feature_task.md
apps/: __init__.py
apps/cli/: __init__.py  main.py
docs/: agentic-workflow.md  backlog-status.generated.md  backlog-status.md  roadmap.md  workflow-assessment-2026-04-05.md
docs/decisions/: 001-mock-default-real-ct2-optional.md  002-pdf-text-first-no-ocr.md  003-task-contract-naming-convention.md  README.md  TEMPLATE.md
docs/tasks/: 001-000-bootstrap-core.md  002-001-cli-skeleton.md  003-002-engine-ct2.md  004-003-text-adapter.md  005-004-docx-adapter.md  006-005-pipeline-e2e.md  007-006-engine-mode.md  008-007-integration-packaging.md  009-008-real-ct2-smoke-test.md  010-009-ct2-tokenizer-integration.md  011-010-pptx-adapter-bootstrap.md  012-011-xlsx-adapter-bootstrap.md  013-012-pdf-text-adapter-bootstrap.md  014-013-docx-fidelity-hardening.md  015-014-ci-matrix-real-ct2-gate.md  016-015-fix-marian-ct2-output-fidelity.md  018-017-docx-semantic-run-grouping.md  _template.md  bootstrap-core.md  cli-skeleton.md  ct2-tokenizer-integration.md  docx-adapter.md  engine-ct2.md  engine-mode.md  fix-marian-ct2-output-fidelity.md  integration-packaging.md  pipeline-e2e.md  real-ct2-smoke-test.md  text-adapter.md
scripts/: finish-task.sh  list-pending-tasks.sh  list-tasks.sh  new-task.sh  run-task.sh  smoke_ct2_en_fr.py  snapshot-backlog.sh  summarize-completed-tasks.sh  sync-backlog.sh
(+22 files in other folders)
