[project]
name = "vaulttranslate-ct2"
version = "0.1.0"
description = "Offline document translation engine powered by CTranslate2"
requires-python = ">=3.12"

dependencies = [
    "typer",
    "pydantic",
    "python-docx",
    "transformers",
]

[project.scripts]
vaulttranslate = "apps.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
