[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaulttranslate-ct2"
version = "0.1.0"
description = "Offline document translation engine powered by CTranslate2"
requires-python = ">=3.12"

dependencies = [
    "typer",
    "pydantic",
    "python-docx",
    "python-pptx",
    "openpyxl",
    "pypdf",
]

[project.optional-dependencies]
ct2 = [
    "ctranslate2",
    "transformers",
]

[project.scripts]
vaulttranslate = "apps.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]
exclude = ["tests*", "models*", "docs*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "openpyxl",
    "openpyxl.*",
    "pypdf",
    "pypdf.*",
]
ignore_missing_imports = true
